# hp-log

./: .gitignore  Cargo.toml  README.md  build.rs  log.toml  todo.md
cpp/: lib.cpp  logger.h
example/: simple.rs
src/: appender.rs  color.rs  config.rs  cpp.rs  event.rs  filter.rs  lib.rs  logger.rs  main.rs  writer.rs
src/appender/: console_appender.rs  file_appender.rs
