[package]
name = "hp-log"
version = "0.2.1"
authors = ["wtu-sos <wtusos@gmail.com>"]
edition = "2018"
homepage = "https://github.com/wtu-sos/hp-log"
repository = "https://github.com/wtu-sos/hp-log"
license = "Apache-2.0"
description = """
try to implement high performance log :w
"""

[dependencies]
strfmt = "0.1.6"
time = "0.1.41"
serde = "1.0.84"
serde_derive = "1.0.84"
toml = "0.4.10"
lazy_static = "1.1.0"

[build-dependencies]
cc = "1.0"

[target.'cfg(windows)'.dependencies]
wincolor = "1.0"

[[example]]
name = "simple"
path = "example/simple.rs"
